fixed layout issues

--- a/media/css/style.css
+++ b/media/css/style.css
@@ -103,6 +103,7 @@ button.awesome,
 	-moz-border-radius: 15px;
 	-webkit-border-radius: 15px;
 	-moz-box-shadow: 0 1px 3px rgba(0,0,0,0.5);
+    box-shadow: 0 1px 3px rgba(0,0,0,0, .5)''
 	-webkit-box-shadow: 0 1px 3px rgba(0,0,0,0.5);
 	text-shadow: 0 -1px 1px rgba(0,0,0,0.25);
 	border-bottom: 1px solid rgba(0,0,0,0.25);
